# cumulus-message-adapter-python

./: .gitignore  .markdownlint.yaml  .snyk  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  cumulus_logger.py  nose2.cfg  pyproject.toml  requirements-dev.txt  requirements.txt  run_cumulus_task.py  setup.py  version.py
.circleci/: config.yml
example/: README.md  example.py  requirements.txt  task.py  template.yaml
example/schemas/: config.json
example/tests/fixtures/: event.json
handler/: handler.py
tests/: helpers.py  test.py  test_env_var.py  test_logger.py
tests/fixtures/messages/simple/: input.json
